--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(FLAGS_LINUX -Wextra -Werror -Wconversion -pedantic)
 set(FLAGS_WINDOWS /W4 /WX /we)
 
 set(SOURCES src/database.cpp src/student.cpp)
+set(TESTS tests/student-ut.cpp tests/database-ut.cpp)
 
 include(FetchContent)
 FetchContent_Declare(
@@ -22,7 +23,7 @@ project(university-db)
 enable_testing()
 
 add_executable(${PROJECT_NAME} src/main.cpp ${SOURCES})
-add_executable(${PROJECT_NAME}-ut tests/student-ut.cpp ${SOURCES})
+add_executable(${PROJECT_NAME}-ut ${TESTS} ${SOURCES})
 
 if(UNIX)
     target_compile_options(${PROJECT_NAME} PRIVATE ${FLAGS_COMMON} ${FLAGS_LINUX})
